--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 
 <body>
   <!-- Thêm các link điều hướng -->
-   <a href="/webcanhan.html">Home</a>
+   <a href="./webcanhan.html">Home</a>
   <a href="/">Contact</a>
-  <a href="/myskill.html">My skill</a>
+  <a href="./myskill.html">My skill</a>
 
   <h1>Contact Me</h1>
   <p>Tel: +123456789 <br>
