--- a/webcanhan.html
+++ b/webcanhan.html
@@ -14,9 +14,9 @@
     <!-- 1. Điều hướng về trang chủ -->
     <a href="">Home</a>
     <!-- 2. Điều hướng đến contact.html -->
-    <a href="/contact.html">Contact</a>
+    <a href="./contact.html">Contact</a>
     <!-- 3. Điều hướng đến my-skill.html -->
-    <a href="/myskill.html">My skill</a>
+    <a href="./myskill.html">My skill</a>
 
     <h1>Welcome to My Website!</h1>
     <hr>
