--- a/webcanhan.html
+++ b/webcanhan.html
@@ -25,7 +25,7 @@
     <hr>
 
     <!-- Thêm hình ảnh tuhoc.cc.jpg và khi click chuột sẽ điều hướng đến contact.html  -->
-    <img src="/IMG_5681.JPG" height="300" alt="">
+    <img src="./IMG_5681.JPG" height="300" alt="">
     <h2>About me</h2>
     <p>Xin chào! Tôi là một Giám đốc sáng tạo và Nhà thiết kế đầy nhiệt huyết, mang trong mình niềm đam mê với nghệ
         thuật và khả năng tạo ra những trải nghiệm độc đáo và gây ấn tượng. Với kinh nghiệm dày dặn và sự tinh tế trong
