--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Thêm các link điều hướng -->
    <a href="./webcanhan.html">Home</a>
-  <a href="/">Contact</a>
+  <a href="">Contact</a>
   <a href="./myskill.html">My skill</a>
 
   <h1>Contact Me</h1>
